<resources>
    <string name="app_name">Squeaky</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_music_library">Music Library</string>
    <string name="nav_recent_plays">Recent Plays</string>
    <string name="nav_recommended">Recommended</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_download">Download</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>NowPlaying</item>
        <item>MusicLibrary</item>
        <item>RecentPlays</item>
        <item>Recommended</item>
        <item>Settings</item>
        <item>Download</item>
    </string-array>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
