<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:title="@string/nav_now_playing" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_music_library"
            android:title="@string/nav_music_library" />
        <item
            android:id="@+id/nav_recenr_plays"
            android:title="@string/nav_recent_plays" />

        <item
            android:id="@+id/nav_recommended"
            android:title="@string/nav_recommended" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_download"
            android:title="@string/nav_download" />
    </group>


</menu>